# MoveVR

./: .gitmodules  CMakeLists.txt  README.md  config.h.in
lib/: CMakeLists.txt  imconfig.h
src/: CMakeLists.txt  Logger.cpp  Logger.h  Plugin.cpp
src/MoveVR/: AsyncPBO.cpp  CMakeLists.txt  DataRef.cpp  DataRef.h  ImgWindow.cpp  ImgWindow.h  ManagerWidget.cpp  ManagerWidget.h  MoveVR.cpp  MoveVR.h  MovedWindow.cpp  MovedWindow.h  WindowManager.cpp  WindowManager.h
src/imgui/: CMakeLists.txt  ImgWindow.cpp  ImgWindow.h
src/windows/: CMakeLists.txt  Window.cpp  Window.h
src/xplane/: CMakeLists.txt  VRTriggerCapturer.cpp  VRTriggerCapturer.h  XPlaneWindowList.cpp  XPlaneWindowList.h
